--- a/Jogos/templates/Jogos/usuario_success.html
+++ b/Jogos/templates/Jogos/usuario_success.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Cadastro feito com sucesso!!
+    <h1>Conta criada com sucesso!!!!</h1>
+
+    <a href="{% url 'usuario' %}">
+        <button type="button">Voltar ao Formulário</button>
+    </a>
+    
 </body>
 </html>
