--- a/Jogos/templates/Jogos/usuario_Forms.html
+++ b/Jogos/templates/Jogos/usuario_Forms.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criação de Usuários</title>
+    <title>Cadastro de Usuários</title>
 </head>
 <body>
-    <h1>Criação de Usuários</h1>
+    <h1>Cadastro de Usuários</h1>
     <form method="post">
         {% csrf_token %}
         
