--- a/Jogos/templates/Jogos/distribuidora_success.html
+++ b/Jogos/templates/Jogos/distribuidora_success.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Conta criada com sucesso!!!!</h1>
 
-    <a href="{% url 'usuario' %}">
+    <a href="{% url 'Distribuidora' %}">
         <button type="button">Voltar ao Formulário</button>
     </a>
     
