atualização dos templates html
alterei algumas mensagens para o sucesso do cadastro, é a adicionei um botão para voltar para escolha de usuário em cada formulario

--- a/Jogos/templates/Jogos/desenvolvedor_forms.html
+++ b/Jogos/templates/Jogos/desenvolvedor_forms.html
@@ -31,9 +31,13 @@
 
 
         <button type="submit">Enviar</button>
+        <br>
 
+        <a href="{% url 'escolha' %}">
+            <button type="button">Voltar a escolha de usuario</button>
+        </a>
 
-
+        
     </form>
 
 
