--- a/Jogos/templates/Jogos/Desenvolvedor_success.html
+++ b/Jogos/templates/Jogos/Desenvolvedor_success.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cadastro feito com sucesso</title>
 </head>
 <body>
     <h1>Conta criada com sucesso!!!!</h1>
 
     <a href="{% url 'desenvolvedor' %}">
         <button type="button">Voltar ao Formulário</button>
-    </a>
+    </a> <br>
     
 
     <a href="{% url 'escolha' %}">
