--- a/Jogos/templates/Jogos/distribuidora_forms.html
+++ b/Jogos/templates/Jogos/distribuidora_forms.html
@@ -31,8 +31,11 @@
 
         </div>
 
-        <button type="submit">Enviar</button>
+        <button type="submit">Enviar</button> <br>
 
+        <a href="{% url 'escolha' %}">
+            <button type="button">Voltar a escolha de usuario</button>
+        </a>
 
 
 
